--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
       <meta name="viewport" content="widt=device-width, initial-scale=1.0" />
         <title>Document</title>
     </head>
-        <body></body>
+        <body>
+          <h1>Hello! Here is our website </h1>
+          <p>Here is some content</p>
+        </body>
   </html>
